--- a/myapplication/src/main/res/values/strings.xml
+++ b/myapplication/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
-    <string name="app_name">tuts+mvp_sample</string>
+    <string name="app_name">Second MVP</string>
     <string name="action_settings">Settings</string>
 </resources>
